# dfo

./: .gitignore  CMakeLists.txt  Makefile  README.md  cross-entropy.cc  cross-entropy.hh  direct.cc  direct.hh  downhill.cc  downhill.hh  mads.cc  mads.hh  mcs.cc  mcs.hh  nelder-mead.cc  powell.cc  powell.hh  results.txt  show_image.plt  test.cc
